<resources>
    <string name="app_name">Android Academy</string>

    <string name="image_description">Image</string>

    <string name="menu_item_search">Search</string>
    <string name="menu_item_sync">Synchronize</string>
    <string name="menu_item_next">Next</string>
    <string name="menu_item_before">Before</string>

    <string name="details_released_title">Released:</string>
    <string name="details_button_movie_trailer">Movie Trailer</string>
    <string name="details_overview_title">Overview:</string>
    <string name="details_useful_series">Your favorite series ;)</string>

    <string name="threads_tools">Thread Tools</string>
    <string name="threads_hard_work">Hard work will be done in:</string>
    <string name="threads_ui_thread">UI Thread</string>
    <string name="threads_handler_thread">ThreadHandler</string>
    <string name="threads_async_task">AsyncTask</string>
    <string name="threads_coroutines">Coroutines</string>
    <string name="threads_scale_indicator">Scale Indicator</string>
    <string name="threads_start">Start</string>
    <string name="threads_chose_tool">Chose a tool!</string>

    <string name="exit_alert_title">Really Exit?</string>
    <string name="exit_alert_message">Are you sure you want to exit?</string>

    <string name="content_description_movie_backdrop">Movie Backdrop</string>
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="content_description_appbar_navigation">Threads Tools</string>
    <string name="content_description_appbar_come_back">Come Back</string>
    <string name="content_description_threads_close">Close</string>
    <string name="content_description_threads_indicator">Indicator</string>

</resources>
