<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.movie_details.DetailsFragment"
    tools:showIn="@layout/fragment_details">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/details_iv_poster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_description_movie_poster"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/details_tv_title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
            android:textColor="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/details_iv_poster"
            app:layout_constraintTop_toTopOf="@+id/details_iv_poster"
            tools:text="@tools:sample/cities" />

        <TextView
            android:id="@+id/details_tv_released"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/details_released_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/details_tv_title"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_title" />

        <TextView
            android:id="@+id/details_tv_released_date"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
            app:layout_constraintBaseline_toBaselineOf="@+id/details_tv_released"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/details_tv_released"
            tools:text="@tools:sample/date/mmddyy" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/details_btn_trailer"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/details_button_movie_trailer"
            app:layout_constraintStart_toStartOf="@+id/details_tv_released"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_released_date" />

        <TextView
            android:id="@+id/details_tv_overview"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/details_overview_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/details_iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/details_iv_poster" />

        <TextView
            android:id="@+id/details_tv_overview_text"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/text_color_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/details_tv_overview"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_overview"
            tools:text="@tools:sample/lorem/random" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>